console.log works need to edit the scripts for grammer

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-/*my css will be in here*/
 
-
-/*QUACK QUACK QUACK */
+.rgba-primary-0 { color: rgba(177,114, 54,1) }	/* Main Primary color */
+.rgba-primary-1 { color: rgba(255,142, 34,1) }
+.rgba-primary-2 { color: rgba(255,175, 99,1) }
+.rgba-primary-3 { color: rgba(143, 70,  0,1) }
+.rgba-primary-4 { color: rgba( 77, 45, 15,1) }
