--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
+th, td {
+    color: blue;
+    width: 100px;
+}
 
-.rgba-primary-0 { color: rgba(177,114, 54,1) }	/* Main Primary color */
-.rgba-primary-1 { color: rgba(255,142, 34,1) }
-.rgba-primary-2 { color: rgba(255,175, 99,1) }
-.rgba-primary-3 { color: rgba(143, 70,  0,1) }
-.rgba-primary-4 { color: rgba( 77, 45, 15,1) }
+
+
+
+
+.rgba-primary-0 { color: rgba(103, 50,  0,1) }	/* Main Primary color */
+.rgba-primary-1 { color: rgba( 65, 32,  2,1) }
+.rgba-primary-2 { color: rgba( 79, 39,  0,1) }
+.rgba-primary-3 { color: rgba(155, 76,  0,1) }
+.rgba-primary-4 { color: rgba(211,103,  0,1) }
