--- a/css/normalize.css
+++ b/css/normalize.css
@@ -142,8 +142,8 @@ h1 {
  */
 
 mark {
-  background: #ff0;
-  color: #000;
+  background-image: url("/Users/evantatum/Downloads/background%20coffeeShop.png");
+}
 }
 
 /**
